Updating all services' tests.